--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.3.1",
     "react-country-flag": "^3.1.0",
     "react-dom": "18.3.1",
+    "react-select": "^5.10.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
     "tailwindcss-animate": "^1.0.7"
