--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,8 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "node_modules/vitest/globals.d.ts"
+  ]
 }
