--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "typescript": "5.7.3",
     "typescript-eslint": "8.26.0",
     "vite": "6.2.1",
+    "vite-plugin-pwa": "^0.21.2",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.0.8"
+    "vitest": "3.0.8",
+    "workbox-cli": "^7.3.0"
   }
 }
