--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "open-holidays-2025",
+  "name": "open-holidays",
   "private": true,
-  "version": "0.3.63",
+  "version": "0.4.0",
   "type": "module",
+  "author": {
+    "name": "Pavel Klochkov",
+    "url": "https://github.com/ckomop0x"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
