--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-select": "^5.10.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "workbox-window": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "9.30.0",
