--- a/package.json
+++ b/package.json
@@ -54,5 +54,6 @@
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "3.2.4",
     "workbox-cli": "7.3.0"
-  }
+  },
+  "packageManager": "pnpm@10.12.4"
 }
